Layout bug fixes

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 html,
 body,
 #root {
-  @apply h-full w-full;
+  @apply min-h-full w-full;
 }
